<resources>
	
	<!-- Activity titles -->
	<string name="app_name">Pocket Trainer</string>
	<string name="app_name_line">Pocket\nTrainer</string>

	<string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
	<string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean interdum quam in magna ultricies egestas. Donec facilisis pretium est nec tempus. Nulla ac pharetra nisi. Proin eget justo turpis. Proin ultrices lacus et orci convallis dictum. Fusce semper augue felis, eget porttitor ipsum bibendum sed.</string>


	<!-- Navigation Drawer -->
	<string name="home">Home</string>
	<string name="profile">Profile</string>
	<string name="planner">Training planner</string>
	<string name="workout">New workout</string>
	<string name="history">History</string>
	<string name="spotify">Spotify</string>
	<string name="calculate_bmi">Calculate BMI</string>
	<string name="calculate_fat">Calculate BFP</string>
	<string name="log_out">Log out</string>
	<string name="settings">Settings</string>
	<string name="quit">Quit</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>


	<!-- Overflow Menu -->
	<string name="about">About</string>
	<string name="feedback">Feedback</string>
	<string name="author_about">Wojciech Kolendo</string>
	<string name="author_email">woko27@gmail.com</string>

	<!-- Trainings List -->
	<string name="training_activities_num">%d activities</string>
	<string name="training_activities_one">1 activity</string>
	<string name="training_activities_zero">No activities. Tap here to add some.</string>
	<string name="training_title">Training title</string>
	<string name="training_description">Training description</string>
	<string name="add">Add</string>

	<!-- Activities List -->
	<string name="sets">Sets</string>
	<string name="time">Time</string>
	<string name="activity_sets">%d sets</string>
	<string name="activity_set">1 set</string>
	<string name="activity_hour">"%d hour "</string>
	<string name="activity_hours">"%d hours "</string>
	<string name="activity_minute">"%d minute "</string>
	<string name="activity_minutes">"%d minutes "</string>
	<string name="activity_second">"%d second "</string>
	<string name="activity_seconds">"%d seconds "</string>

	<!-- Workout -->
	<string name="start">Start</string>
	<string name="select_workout_title">Select new workout type</string>
	<string name="running">Running</string>
	<string name="cycling">Cycling</string>
	<string name="switch_accuracy">Enable less accuracy</string>
	<string name="switch_units">Metric units</string>

	<!-- Workout tracing -->
	<string name="new_with_whitespace">"New "</string>
	<string name="finish">Finish</string>
	<string name="resume">Resume</string>
	<string name="pause">Pause</string>
	<string name="dash">-</string>
	<string name="blank_time">00:00:00</string>
	<string name="blank_distance_m">0.00 m</string>
	<string name="blank_distance_km">0.00 km</string>
	<string name="blank_speed_m">0.00 m/s</string>
	<string name="blank_speed_km">0.00 km/h</string>
	<string name="distance_units_m">%.2f m</string>
	<string name="distance_units_km">%.2f km</string>
	<string name="speed_units_mps">%.2f m/s</string>
	<string name="speed_units_kph">%.2f km/h</string>
	<string name="workout_paused">Workout paused</string>
	<string name="workout_resumed">Workout resumed</string>

	<!-- Workout details -->
	<string name="workout_summary">Workout summary</string>
	<string name="start_time">Start time</string>
	<string name="start_location">Start location</string>
	<string name="finish_time">Finish time</string>
	<string name="finish_location">Finish location</string>
	<string name="elapsed_time">Elapsed time</string>
	<string name="total_distance">Total distance</string>
	<string name="average_speed">Average speed</string>
	<string name="average_speed_without_stops">Average speed without stops</string>
	<string name="top_speed">Top speed</string>
	<string name="burned_calories">Estimated burned calories</string>
	<string name="date_format">h:mm a, EEEE, d MMMM yyyy</string>
	<string name="chart">Chart</string>
	<string name="burned_units_kcal">%d kcal</string>

	<!-- Calculators -->
	<string name="bmi_info">Body Mass Index is a measure of body fat based on your weight in relation to your weight.</string>
	<string name="bfp_info">Body Fat Percentage is the total mass of fat divided by total body mass.</string>
	<string name="calculate_your_bmi">Calculate your \nBody Mass Index</string>
	<string name="calculate_your_bfp">Calculate your \nBody Fat Percentage</string>
	<string name="hint_weight">Enter weight</string>
	<string name="hint_height">Enter height</string>
	<string name="hint_age">Enter age</string>
	<string name="calculate">Calculate</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="metric_units">kg, cm</string>
	<string name="imperial_units">lb, ft</string>
	<string name="validate_calculator_units">Select units</string>
	<string name="validate_calculator_sex">Select your sex</string>
	<string name="validate_calculator_weight">Enter your weight</string>
	<string name="validate_calculator_height">Enter your height</string>
	<string name="validate_calculator_age">Enter your age</string>
	<string name="your_bmi">Your BMI:</string>
	<string name="your_bfp">Your BFP:</string>
	<string name="use_calculator">use calculator first</string>
	<string name="bmi_result_title_great">Great!</string>
	<string name="bmi_result_title_good">Good, but could be great!</string>
	<string name="bfp_result_title_oops">Oops!</string>
	<string name="bfp_result_title_great">Great!</string>
	<string name="bfp_result_title_good">Good, but could be great!</string>
	<string name="bmi_result_title_oops">Oops!</string>
	<string name="bmi_underweight_info">You are underweight, you should seriously gain some weight.</string>
	<string name="bmi_underweight_mild_info">You are little underweight, try gain some weight.</string>
	<string name="bmi_normal_info">You have healthy weight and body, keep it up!</string>
	<string name="bmi_overweight_info">You are overweight, try loose some weight and don\'t give up.</string>
	<string name="bmi_obesity_info">You have obesity, you should seriously loose weight.</string>
	<string name="bfp_underweight_info">You are underweight, you should seriously gain some weight.</string>
	<string name="bfp_underweight_mild_info">You are little underweight, try gain some weight.</string>
	<string name="bfp_normal_info">You have healthy weight and body, keep it up!</string>
	<string name="bfp_overweight_info">You are overweight, try loose some weight and don\'t give up.</string>
	<string name="bfp_obesity_info">You have obesity, you should seriously loose weight.</string>
	<string name="underweight_severely">Severely underweight</string>
	<string name="underweight">Underweight</string>
	<string name="normal">Normal</string>
	<string name="overweight">Overweight</string>
	<string name="obesity">Obesity</string>
	<string name="bmi_annotation">Bare in mind that those ranges don\'t fit exactly for everyone, for instance if you are well build. Muscles weight more than fat. Also, the percentage of essential body fat for women is greater than that for men, due to the demands of childbearing and other hormonal functions</string>

	<!-- Dialogs -->
	<string name="gps_disabled">Location service is disabled. \nDo you want to open location settings?</string>
	<string name="locations_fail">Location service on device cannot be reached.</string>
	<string name="locations_services_suspend">Location services suspended. Please reconnect.</string>
	<string name="locations_services_fail">Location services failed.</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="cancel_workout">Do you really want to cancel your workout? \nNo data will be saved.</string>
	<string name="finish_workout">Do you want to finish your workout?</string>
	<string name="no_location_permission">Location permission not accessed</string>
	<string name="less_accuracy_msg">Less accuracy mode increases time interval between location service responses. Enabling this gives you less accurate data, such as speedometer, but ensures far less battery draining.</string>
	<string name="delete_workout_title">Delete workout</string>
	<string name="delete_workout_msg">Confirm deleting workout</string>
	<string name="delete">Delete</string>
	<string name="delete_training_title">Delete training</string>
	<string name="delete_training_msg">Confirm deleting training</string>

	<!-- Settings Preferences -->
	<string name="settings_less_accuracy_key">less_accuracy_key</string>
	<string name="settings_metric_units_key">metric_units_key</string>

</resources>
