<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group
		android:id="@+id/group_home"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:checked="true"
			android:icon="@drawable/ic_home_black_24dp"
			android:title="@string/home" />
	</group>

	<group
		android:id="@+id/group_workouts"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_workout"
			android:icon="@drawable/ic_directions_run_black_24dp"
			android:title="@string/workout" />
		<item
			android:id="@+id/nav_history"
			android:icon="@drawable/ic_restore_black_24dp"
			android:title="@string/history" />
	</group>

	<group
		android:id="@+id/group_calculators"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_bmi"
			android:icon="@drawable/ic_calculator_24dp"
			android:title="@string/calculate_bmi" />

		<item
			android:id="@+id/nav_calculate_bfp"
			android:icon="@drawable/ic_calculator_24dp"
			android:title="@string/calculate_fat" />

	</group>

	<group
		android:id="@+id/group_settings"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_settings_black_24dp"
			android:title="@string/settings" />
		<item
			android:id="@+id/nav_quit"
			android:icon="@drawable/ic_power_settings_new_black_24dp"
			android:title="@string/quit" />
	</group>

</menu>
