<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center_horizontal"
		android:paddingTop="32dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/calculate_your_bmi"
			android:gravity="center_horizontal"
			android:textColor="@color/colorAccent"
			android:layout_gravity="center_horizontal"
			android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			android:src="@drawable/ic_calculator_black_100dp"
			android:layout_marginBottom="5dp"/>

		<RadioGroup
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:id="@+id/bmi_units"
			android:layout_gravity="center_horizontal">

			<RadioButton
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="@string/metric_units"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
				android:id="@+id/bmi_metric"
				android:layout_margin="5dp"
				android:layout_gravity="center_vertical"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/imperial_units"
				android:id="@+id/bmi_imperial"
				android:layout_margin="5dp"/>
		</RadioGroup>

		<RadioGroup
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:id="@+id/bmi_sex"
			android:layout_gravity="center_horizontal"
			android:visibility="gone">

			<RadioButton
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="@string/male"
				android:id="@+id/bmi_male"
				android:layout_margin="5dp"
				android:layout_gravity="center_vertical"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/female"
				android:id="@+id/bmi_female"
				android:layout_margin="5dp"/>
		</RadioGroup>


		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="5dp">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/bmi_weight"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:hint="@string/hint_weight"
				android:imeActionId="@+id/action_login"
				android:imeOptions="actionNext"
				android:inputType="numberDecimal"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/bmi_height"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:hint="@string/hint_height"
				android:imeActionId="@+id/action_login"
				android:imeOptions="actionDone"
				android:inputType="numberDecimal"/>

		</android.support.design.widget.TextInputLayout>


		<Button
			android:id="@+id/bmi_calculate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:paddingStart="25dp"
			android:paddingEnd="25dp"
			android:background="@drawable/frame_rounded_accent"
			android:textColor="@color/common_google_signin_btn_text_dark"
			android:text="@string/calculate"
			android:layout_gravity="center_horizontal"/>


	</LinearLayout>

</ScrollView>
