<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			xmlns:tools="http://schemas.android.com/tools"
			xmlns:app="http://schemas.android.com/apk/res-auto">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="5dp">

		<android.support.v7.widget.CardView
			android:id="@+id/bfp_info_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:foreground="?attr/selectableItemBackground"
			app:cardCornerRadius="0dp"
			app:cardUseCompatPadding="true">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bfp_info"
				android:gravity="center_horizontal"
				android:padding="10dp"/>
		</android.support.v7.widget.CardView>

		<View
			android:id="@+id/horizontal_center"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_below="@+id/bfp_info_card"
			android:layout_centerHorizontal="true"
			/>

		<android.support.v7.widget.CardView
			android:id="@+id/bfp_result_card"
			app:cardBackgroundColor="@color/colorAccent"
			app:cardElevation="1dp"
			android:clickable="true"
			android:foreground="?attr/selectableItemBackground"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="2dp"
			android:layout_alignTop="@+id/horizontal_center"
			android:layout_centerHorizontal="true">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp"
				android:paddingRight="16dp"
				android:paddingLeft="16dp"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/white"
					android:textSize="21sp"
					android:text="@string/your_bfp"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:textColor="@color/white"
					android:textSize="21sp"
					android:text="@string/use_calculator"
					android:id="@+id/bfp_result"
					/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:id="@+id/bfp_result_info_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/bfp_result_card"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:clickable="true"
			android:foreground="?attr/selectableItemBackground"
			android:animateLayoutChanges="true"
			tools:visibility="visible"
			android:visibility="gone">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingBottom="16dp"
					android:paddingTop="16dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/bfp_result_title"
						android:layout_marginBottom="5dp"
						android:text="@string/bfp_result_title_great"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>

					<TextView
						android:id="@+id/bfp_result_info"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:text="@string/bfp_normal_info"/>
				</LinearLayout>
		</android.support.v7.widget.CardView>


		<android.support.v7.widget.CardView
			android:id="@+id/bfp_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/bfp_result_info_card"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:clickable="true"
			android:foreground="?attr/selectableItemBackground"
			android:animateLayoutChanges="true">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingTop="16dp">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/bfp_severely_underweight_num"
						android:layout_marginBottom="8dp"
						android:paddingRight="@dimen/activity_horizontal_margin"
						android:text="&lt; 17"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:id="@+id/bfp_severely_underweight"
						android:text="@string/underweight_severely"
						android:gravity="end"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingTop="6dp">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:id="@+id/bfp_underweight_num"
						android:text="17 - 18.5"
						android:paddingRight="@dimen/activity_horizontal_margin"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:id="@+id/bfp_underweight"
						android:text="@string/underweight"
						android:gravity="end"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingTop="6dp">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:id="@+id/bfp_normal_num"
						android:text="18.5 - 25"
						android:paddingRight="@dimen/activity_horizontal_margin"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:id="@+id/bfp_normal"
						android:text="@string/normal"
						android:gravity="end"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingTop="6dp">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:id="@+id/bfp_overweight_num"
						android:paddingRight="@dimen/activity_horizontal_margin"
						android:text="25 - 30"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/bfp_overweight"
						android:animateLayoutChanges="true"
						android:text="@string/overweight"
						android:gravity="end"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingTop="6dp">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:id="@+id/bfp_obesity_num"
						android:paddingRight="@dimen/activity_horizontal_margin"
						android:text="&gt; 30"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:id="@+id/bfp_obesity"
						android:text="@string/obesity"
						android:gravity="end"/>
				</LinearLayout>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bmi_annotation"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingBottom="8dp"
					android:paddingTop="6dp"
					android:textSize="11sp"
					android:gravity="center"/>

			</LinearLayout>
		</android.support.v7.widget.CardView>

	</RelativeLayout>


</ScrollView>
