<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				xmlns:tools="http://schemas.android.com/tools"
				android:paddingTop="32dp"
				android:paddingBottom="16dp"
				android:paddingLeft="32dp"
				android:paddingRight="32dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/training_activity_edit_title_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_centerHorizontal="true">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/training_activity_edit_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:hint="@string/training_title"
			android:imeOptions="actionNext"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>


	<android.support.design.widget.TextInputLayout
		android:id="@+id/training_activity_edit_description_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="15dp"
		android:layout_below="@id/training_activity_edit_title_layout"
		android:layout_centerHorizontal="true">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/training_activity_edit_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:hint="@string/training_description"
			android:imeOptions="actionDone"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>


	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/training_activity_edit_description_layout"
		android:layout_marginTop="15dp"
		android:id="@+id/training_activity_radio_group"
		android:gravity="center">

		<RadioButton
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:text="@string/sets"
			android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
			android:id="@+id/training_activity_radio_sets"
			android:layout_margin="5dp"
			android:layout_gravity="center_vertical"/>

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/time"
			android:id="@+id/training_activity_radio_time"
			android:layout_margin="5dp"/>
	</RadioGroup>

		<com.shawnlin.numberpicker.NumberPicker
			android:id="@+id/number_picker_sets"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:layout_below="@id/training_activity_radio_group"
			android:layout_marginTop="15dp"
			android:animateLayoutChanges="true"
			android:layout_centerInParent="true"
			android:visibility="visible"
			tools:visibility="visible"
			app:np_width="64dp"
			app:np_height="180dp"
			app:np_dividerColor="@color/colorAccent"
			app:np_textSize="17dp"
			app:np_max="99"
			app:np_min="0"
			app:np_wheelItemCount="5"
			app:np_dividerDistance="32dp"
			app:np_textColor="@color/colorPrimary" />

	<LinearLayout
		android:id="@+id/number_picker_time_frame"
		android:orientation="horizontal"
		android:layout_below="@id/training_activity_radio_group"
		android:layout_marginTop="15dp"
		android:layout_centerInParent="true"
		android:animateLayoutChanges="true"
		android:visibility="gone"
		tools:visibility="gone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<com.shawnlin.numberpicker.NumberPicker
			android:id="@+id/number_picker_time_min"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			app:np_width="64dp"
			app:np_height="180dp"
			app:np_dividerColor="@color/colorAccent"
			app:np_textSize="17dp"
			app:np_max="59"
			app:np_min="0"
			app:np_wheelItemCount="5"
			app:np_dividerDistance="32dp"
			app:np_textColor="@color/colorPrimary" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="18sp"
			android:textColor="@color/colorPrimary"
			android:text=":"/>

		<com.shawnlin.numberpicker.NumberPicker
			android:id="@+id/number_picker_time_sec"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			app:np_width="64dp"
			app:np_height="180dp"
			app:np_dividerColor="@color/colorAccent"
			app:np_textSize="17dp"
			app:np_max="59"
			app:np_min="0"
			app:np_wheelItemCount="5"
			app:np_dividerDistance="32dp"
			app:np_textColor="@color/colorPrimary" />

	</LinearLayout>

</RelativeLayout>