<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			xmlns:app="http://schemas.android.com/apk/res-auto">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="5dp">

		<android.support.v7.widget.CardView
			android:id="@+id/bmi_info_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardCornerRadius="0dp"
			app:cardUseCompatPadding="true">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bmi_info"
				android:gravity="center_horizontal"
				android:padding="10dp"/>
		</android.support.v7.widget.CardView>

		<View
			android:id="@+id/horizontal_center"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_below="@+id/bmi_info_card"
			android:layout_centerHorizontal="true"
			/>

		<android.support.v7.widget.CardView
			android:id="@+id/result_card"
			app:cardBackgroundColor="@color/colorAccent"
			app:cardElevation="1dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="2dp"
			android:layout_alignTop="@+id/horizontal_center"
			android:layout_centerHorizontal="true">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp"
				android:paddingRight="16dp"
				android:paddingLeft="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/white"
					android:textSize="21sp"
					android:text="@string/your_bmi"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/white"
					android:textSize="21sp"
					android:text="@string/use_calculator"
					android:id="@+id/bmi_result"
					android:paddingLeft="20dp"
					/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:id="@+id/policy_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/result_card"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:animateLayoutChanges="true"
			android:background="?attr/selectableItemBackgroundBorderless">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="16dp"
				android:paddingRight="16dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingBottom="16dp"
					android:paddingTop="16dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:text="fdbdfbd"
						android:textColor="@color/text_light"
						android:textSize="16sp"/>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/policy_name"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:layout_weight="1"
							android:textColor="@color/text_light"
							android:textSize="13sp"
							android:text="GrubasGrubasGrubasGrubas"/>

					</LinearLayout>

					<TextView
						android:id="@+id/policy_description"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:animateLayoutChanges="true"
						android:text="@string/lorem_impsum_long"/>

				</LinearLayout>

				<Button
					android:id="@+id/execute_policy"
					style="@style/Widget.AppCompat.Button.Borderless"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_marginTop="-8dp"
					android:text="gbnbnbvnvbn"
					android:textColor="@color/colorAccent"/>

			</LinearLayout>


		</android.support.v7.widget.CardView>

	</RelativeLayout>


</ScrollView>
